src/main/java/com/example/rabam/error/PackageUpdateException.java
package com.example.rabam.error;

public class PackageUpdateException extends RuntimeException{
    public PackageUpdateException() {
        super("Packet didn't update");
    }
}
